--- a/CalendarAPI/CalendarAPI.Infrastructure/CalendarAPI.Infrastructure.csproj
+++ b/CalendarAPI/CalendarAPI.Infrastructure/CalendarAPI.Infrastructure.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\IFileUploader.cs" />
-    <Compile Include="TextFileUploader.cs" />
+    <Compile Include="FileUpload\Contracts\IFileUploader.cs" />
+    <Compile Include="FileUpload\TextFileUploader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
